--- a/themes/Markut/layouts/card/list.html
+++ b/themes/Markut/layouts/card/list.html
@@ -1,15 +1,25 @@
 {{ partial "head.html" . }}
 <div class="container">
     <div class="text-center">
-       <img loading="lazy" style="margin-bottom: -50px;" src="http://localhost:1313/img/logo-color.svg" width="200px" alt="Markut Logo"><br>
-    <img src="https://www.markut.net/logo/svg/markut-type.svg" width="500px" alt=""></div>
+    <a href="{{.Site.BaseURL}}">   <img loading="lazy" style="margin-bottom: -50px;" src="https://www.markut.net/img/logo-color.svg" width="200px" alt="Markut Logo"><br>
+    <img src="https://www.markut.net/logo/svg/markut-type.svg" width="500px" alt=""></div></a>
     <h2 class="text-center mt-1 mb-4" style="font-size: 24px;">/CARD</h2>
     <div style="max-width: 400px; margin: 0 auto; text-justify: newspaper; text-align: justify;"><p>Markut, Marmara Kreatif Ürün Tasarım ekibidir. Ekibimizle Ağustos 2020'de online endüstriyel tasarım dergimizi bu platformda yayınlamaya başladık. Dergimiz, endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üretmektedir.</p>
 </div>
 </div>
+
+
+
 {{ partial "mailde.html" . }} <br><br><br>
 {{ partial "abone-ol.html" . }}
-
+<div class="container">
+  <h2 class="text-center">Dergimizden Son 3 Sayı:</h2>
+<div class="row">
+  <div class="col-md-4"><a href="https://www.markut.net/sayi-15/" target="_blank" rel="noopener noreferrer"><img src="https://www.markut.net/img/markut-design-week-aralik-2021.png" alt=""></a></div>
+  <div class="col-md-4"><a href="https://www.markut.net/sayi-14/" target="_blank" rel="noopener noreferrer"><img src="https://www.markut.net/img/markut-ekim-2021-sayi-14.jpg" alt=""></a></div>
+  <div class="col-md-4"><a href="https://www.markut.net/sayi-13/" target="_blank" rel="noopener noreferrer"><img src="https://www.markut.net/img/markut-eylul-2021-sayi-13.png" alt=""></a></div>
+</div>
+</div>
 <div>
 
     <div class="container">
@@ -17,59 +27,59 @@
     <div class="row">
           
         <div class="col-md-3 mb-5">
-          <div class="pl-1 pr-1 pb-2 ml-5 mr-5">
-          <img src="../yazar/atahan-gokturk.jpg" class="rounded-circle" alt=""></div>
-        <h3 class="mt-0 text-center"><a href="http://localhost:1313/yazar/atahan-gokturk/">Atahan Göktürk Güner</a></h3></div>
+          <div class="pb-2 ml-5 mr-5">
+            <a href="https://www.markut.net/yazar/atahan-gokturk/"><img src="../yazar/atahan-gokturk.jpg" class="rounded-circle" alt=""></div>
+        <h3 class="mt-0 text-center">Atahan Göktürk Güner</a></h3></div>
         
         <div class="col-md-3 mb-5">
-            <div class="pl-1 pr-1 pb-2 ml-5 mr-5">
-            <img src="../yazar/deniz-cam.jpg" class="rounded-circle" alt=""></div>
-          <h3 class="mt-0 text-center"><a href="http://localhost:1313/yazar/deniz-cam/">Deniz Çam</a></h3></div>
+            <div class="pb-2 ml-5 mr-5">
+              <a href="https://www.markut.net/yazar/deniz-cam/"><img src="../yazar/deniz-cam.jpg" class="rounded-circle" alt=""></div>
+          <h3 class="mt-0 text-center">Deniz Çam</a></h3></div>
       
         <div class="col-md-3 mb-5">
-          <div class="pl-1 pr-1 pb-2 ml-5 mr-5">
-          <img src="../yazar/elif-ersoz.jpg" class="rounded-circle" alt=""></div>
-        <h3 class="mt-0 text-center"><a href="http://localhost:1313/yazar/elif-ersoz/">Elif Ersöz</a></h3></div>
+          <div class="pb-2 ml-5 mr-5">
+          <a href="https://www.markut.net/yazar/elif-ersoz/"><img src="../yazar/elif-ersoz.jpg" class="rounded-circle" alt=""></div>
+        <h3 class="mt-0 text-center">Elif Ersöz</a></h3></div>
         
         <div class="col-md-3 mb-5">
-          <div class="pl-1 pr-1 pb-2 ml-5 mr-5">
-          <img src="../yazar/eylul-ecem-sogutlu.jpg" class="rounded-circle" alt=""></div>
-        <h3 class="mt-0 text-center"><a href="http://localhost:1313/yazar/eylul-ecem-sogutlu/">Eylül Ecem Söğütlü</a></h3></div>
+          <div class="pb-2 ml-5 mr-5">
+          <a href="https://www.markut.net/yazar/eylul-ecem-sogutlu/"><img src="../yazar/eylul-ecem-sogutlu.jpg" class="rounded-circle" alt=""></div>
+        <h3 class="mt-0 text-center">Eylül Ecem Söğütlü</a></h3></div>
         
         <div class="col-md-3 mb-5">
-          <div class="pl-1 pr-1 pb-2 ml-5 mr-5">
-          <img src="../yazar/hilal-doruk.jpg" class="rounded-circle" alt=""></div>
-        <h3 class="mt-0 text-center"><a href="http://localhost:1313/yazar/hilal-doruk/">Hilal Doruk</a></h3></div>
+          <div class="pb-2 ml-5 mr-5">
+          <a href="https://www.markut.net/yazar/hilal-doruk/"><img src="../yazar/hilal-doruk.jpg" class="rounded-circle" alt=""></div>
+        <h3 class="mt-0 text-center">Hilal Doruk</a></h3></div>
         
         <div class="col-md-3 mb-5">
-            <div class="pl-1 pr-1 pb-2 ml-5 mr-5">
-            <img src="../yazar/merve-cetin.jpg" class="rounded-circle" alt=""></div>
-          <h3 class="mt-0 text-center"><a href="http://localhost:1313/yazar/merve-cetin/">Merve Çetin</a></h3></div>
+            <div class="pb-2 ml-5 mr-5">
+            <a href="https://www.markut.net/yazar/merve-cetin/"><img src="../yazar/merve-cetin.jpg" class="rounded-circle" alt=""></div>
+          <h3 class="mt-0 text-center">Merve Çetin</a></h3></div>
           
         <div class="col-md-3 mb-5">
-          <div class="pl-1 pr-1 pb-2 ml-5 mr-5">
-          <img src="../yazar/mucahit-vasfi-bas.jpg" class="rounded-circle" alt=""></div>
-        <h3 class="mt-0 text-center"><a href="http://localhost:1313/yazar/mucahit-vasfi-bas/">Mücahit Vasfi Baş</a></h3></div>
+          <div class="pb-2 ml-5 mr-5">
+          <a href="https://www.markut.net/yazar/mucahit-vasfi-bas/"><img src="../yazar/mucahit-vasfi-bas.jpg" class="rounded-circle" alt=""></div>
+        <h3 class="mt-0 text-center">Mücahit Vasfi Baş</a></h3></div>
         
         <div class="col-md-3 mb-5">
-            <div class="pl-1 pr-1 pb-2 ml-5 mr-5">
-            <img src="../yazar/goksu-gokturk.jpg" class="rounded-circle" alt=""></div>
-          <h3 class="mt-0 text-center"><a href="http://localhost:1313/yazar/goksu-gokturk/">Şahsenem Göksu Göktürk</a></h3></div>
+            <div class="pb-2 ml-5 mr-5">
+            <a href="https://www.markut.net/yazar/goksu-gokturk/"><img src="../yazar/goksu-gokturk.jpg" class="rounded-circle" alt=""></div>
+          <h3 class="mt-0 text-center">Şahsenem Göksu Göktürk</a></h3></div>
           
         <div class="col-md-3 mb-5">
-          <div class="pl-1 pr-1 pb-2 ml-5 mr-5">
-          <img src="../yazar/yslamsahet-amangluyyev.png" class="rounded-circle" alt=""></div>
-        <h3 class="mt-0 text-center"><a href="http://localhost:1313/yazar/goksu-gokturk/">Yslamsahet Amangulyyev</a></h3></div>
+          <div class="pb-2 ml-5 mr-5">
+          <a href="mailto:yslamsahat@gmail.com"><img src="../yazar/yslamsahet-amangluyyev.png" class="rounded-circle" alt=""></div>
+        <h3 class="mt-0 text-center"> Yslamsahet Amangulyyev</a></h3></div>
           
         <div class="col-md-3 mb-5">
-          <div class="pl-1 pr-1 pb-2 ml-5 mr-5">
-          <img src="../yazar/zeynep-yarar.jpg" class="rounded-circle" alt=""></div>
-        <h3 class="mt-0 text-center"><a href="http://localhost:1313/yazar/zeynep-yarar/">Zeynep Yarar</a></h3></div>
+          <div class="pb-2 ml-5 mr-5">
+          <a href="https://www.markut.net/yazar/zeynep-yarar/"><img src="../yazar/zeynep-yarar.jpg" class="rounded-circle" alt=""></div>
+        <h3 class="mt-0 text-center">Zeynep Yarar</a></h3></div>
         
         <div class="col-md-3 mb-5">
-          <div class="pl-1 pr-1 pb-2 ml-5 mr-5">
-          <img src="../yazar/zeynep-dag.jpg" class="rounded-circle" alt=""></div>
-        <h3 class="mt-0 text-center"><a href="http://localhost:1313/yazar/zeynep-dag/">Zeynep Dağ</a></h3></div>
+          <div class="pb-2 ml-5 mr-5">
+          <a href="https://www.markut.net/yazar/zeynep-dag/"><img src="../yazar/zeynep-dag.jpg" class="rounded-circle" alt=""></div>
+        <h3 class="mt-0 text-center">Zeynep Dağ</a></h3></div>
        </div>      
     </div>     
 
@@ -89,6 +99,7 @@
 <div class="container">
 <div class="row">
   <div class="col-md-8 offset-md-2">
+   <a href="https://www.markut.net/reklam-sponsorluk/"> <p class="text-center"><button class=" btn markutbtn">Reklam ve Sponsorluk</button></p></a>
     <div class="text-center">    <h3>İletişim</h3></div>
     <div class="text-center">    Mail yoluyla iletişime geçmek için <a href="mailto:bilgi@markut.net">bilgi@markut.net</a> adresini kullanabilirsiniz.
     </div>
@@ -102,86 +113,32 @@
   </div>
 </div>
 
+<div class="m-auto text-center">
 
 
-</div>
+<br><br>
+<h5 class="text-muted">Sosyal Medya</h5>
+<hr class="m-0">
+<ul class="list-group ">
+  <li class="list-group-item p-1"><a href="https://www.instagram.com/markutworks/" target="_blank" rel="nofollow">Instagram</a></li>
+  <li class="list-group-item p-1"><a href="https://www.linkedin.com/company/markut/" target="_blank" rel="nofollow">Linkedin</a></li>
+  <li class="list-group-item p-1"><a href="https://twitter.com/markutworks" target="_blank" rel="nofollow">Twitter</a></li>
+  <li class="list-group-item p-1"><a href="https://tr.pinterest.com/markutworks/" target="_blank" rel="nofollow">Pinterest</a></li>
+  <li class="list-group-item p-1"><a href="https://markutworks.tumblr.com/" target="_blank" rel="nofollow">Tumblr</a></li>
+</ul>
+</div></div>
 
 <footer><div class="container">
     <hr>
-    <div class="row mb-0">
-            <div class="col-md-4"> <div class="footericon"><img loading="lazy" src="http://localhost:1313/img/logo-color.svg" alt="Markut Logo"></div>
-               <div class="footerlogo">MARKUT</div>
-               <div class="footersur">Marmara Kreatif Ürün Tasarım Ekibi</div> <p class="footerdesc">        <strong>Markut</strong>, Marmara Kreatif Ürün Tasarım ekibidir. Ekibimizle Ağustos 2020'de online <strong>endüstriyel tasarım dergimizi</strong> bu platformda yayınlamaya başladık. Dergimiz, endüstri tasarımı bağlamında <strong>genel tasarım</strong> disiplinleriyle de ilişkili olarak içerikler üretmektedir.</p>
-           </div>
-          <div class="col-md-8">
-                    <div class="row mb-0 mt-md-4 mt-4">
-                  <div class="col-md-4 col-sm-6 col-6 text-center mb-4">
-                  <h5 class="text-muted">Bilgi</h5>
-                  <hr class="m-0">
-                    <ul class="list-group">
-                      <li class="list-group-item p-1"><a href="http://localhost:1313/iletisim/">İletişim</a></li>
-                      <li class="list-group-item p-1"><a href="http://localhost:1313/hakkimizda/">Hakkımızda</a></li>
-                      <li class="list-group-item p-1 font-weight-bold"><a href="http://localhost:1313/reklam-sponsorluk/">Reklam ve Sponsorluk</a></li>
-                      <li class="list-group-item p-1"><a href="http://localhost:1313/okuyucu-sozlesmesi/">Okuyucu Sözleşmesi</a></li>
-                      <li class="list-group-item p-1"><a href="http://localhost:1313/logo/">Logo Tasarım</a></li>
-                    </ul>
-                 </div>
-                  <div class="col-md-4 col-sm-6 col-6 text-center">    
-                  <h5 class="text-muted">Linkler</h5>
-                  <hr class="m-0">
-                  <ul class="list-group">
-                    <li class="list-group-item p-1"><a href="http://localhost:1313/yazar/">Yazarlar</a></li>
-                    <li class="list-group-item p-1"><a href="http://localhost:1313/tags/">Etiketler</a></li>
-                    <li class="list-group-item p-1"><a href="http://localhost:1313/illustrasyon/">İllustrasyonlar</a></li>
-                    <li class="list-group-item p-1"><a href="http://localhost:1313/bize-gonder/">Bize Gönder</a></li>
-                    <li class="list-group-item p-1"><div class="custom-control custom-switch m-0 ml-0 pl-0 mdarkmode">
-                      <input type="checkbox" class="custom-control-input " id="darkSwitch" />
-                      <label for="darkSwitch">Karanlık Mod</label>
-                    </div></li>
-                  </ul>
-                  </div>
-                  <div class="col-md-4 text-center">
-                  <h5 class="text-muted">Sosyal Medya</h5>
-                  <hr class="m-0">
-                  <ul class="list-group ">
-                    <li class="list-group-item p-1"><a href="https://www.instagram.com/markutworks/" target="_blank" rel="nofollow">Instagram</a></li>
-                    <li class="list-group-item p-1"><a href="https://www.linkedin.com/company/markut/" target="_blank" rel="nofollow">Linkedin</a></li>
-                    <li class="list-group-item p-1"><a href="https://twitter.com/markutworks" target="_blank" rel="nofollow">Twitter</a></li>
-                    <li class="list-group-item p-1"><a href="https://tr.pinterest.com/markutworks/" target="_blank" rel="nofollow">Pinterest</a></li>
-                    <li class="list-group-item p-1"><a href="https://markutworks.tumblr.com/" target="_blank" rel="nofollow">Tumblr</a></li>
-                  </ul>
-              </div>
-                 <div class="col-md-12"><p class="footerdesc mt-2">
-                  <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Markut | Endüstriyel Tasarım Dergisi</span> <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" rel="nofollow"> Creative Commons BY-NC-SA 4.0</a> ile lisanslanmıştır.
-                    İçeriklerimizi başka platformlarda paylaşırken kaynak olarak <a href="https://www.markut.net">Markut.net</a> ibaresinin geçmesi gerekmektedir. Ticari olarak kullanılamaz.</p>
-                    <div class="text-center mt-3"><a rel="license" target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" rel="nofollow"><img alt="Creative Commons Lisansı" class="text-center border-0"  src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a></div>
-               </div>
-              </div>
-            </div>
-    </div>    
-            <div class="copyright"><a href="http://localhost:1313/">Markut.net</a>  <a href="../dergi/">/dergi</a> | Copyright © 2020-2021 | Markut tarafından tasarlandı.</div>
+            <div class="copyright"><a href="https://www.markut.net/">Markut.net</a>  <a href="/dergi/">/dergi</a> | Copyright © 2020-2021 | Markut tarafından tasarlandı | <a href="/hakkimizda/">Hakkımızda</a></div>
         </div>
       </footer>
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-        <script src="http://localhost:1313/bootstrap/bootstrap.min.js" defer='defer'></script>
+        <script src="https://www.markut.net/bootstrap/bootstrap.min.js" defer='defer'></script>
         <script src="https://emailoctopus.com/bundles/emailoctopuslist/js/1.6/form-embed.js" defer='defer'>
         </script>
-    <script src="http://localhost:1313/js/dark-mode-switch.min.js"></script>
-    <script>$('.slb').simplebox({
-      fadeSpeed: 400, 
-      darkMode: true, 
-      postfix: "_full", 
-      hqClass: "highres" 
-    });</script>
-    
-    <script src="http://localhost:1313/js/jquery.clever-infinite-scroll.js"></script>
-    <script>
-      $('#contentsWrapper').cleverInfiniteScroll({
-          contentsWrapperSelector: '#contentsWrapper',
-          contentSelector: '.content',
-          nextSelector: '#next',
-      });
-    </script>
+
+
     
     <script>
       
@@ -208,6 +165,8 @@
       e.preventDefault()
       $(this).tab('show')
     })
+
+    $('.dropdown-toggle').dropdown()
     </script>
     
     </body>
