Duyuru kaldırıldı ve mervenin paftaları

--- a/themes/Markut/layouts/partials/comment.html
+++ b/themes/Markut/layouts/partials/comment.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <p class="text-center"><b>{{ range .Params.sayi }}{{ . }}{{ end }}. sayıya gelen yorumlar</b></p>
+  <h2 class="text-center"><b>{{ range .Params.sayi }}{{ . }}{{ end }}. sayıya gelen yorumlar</b></h2>
   <script src="https://unpkg.com/valine@1.4.14/dist/Valine.min.js"></script>
 <div id="vcomment"></div>
     <script>
