Noel kutlu olsuun :)

--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -84,3 +84,11 @@
 	   {{end}}
 	</head>
 <body>
+
+	<div style="position: absolute; z-index: 100; right: 0px; top: 0px;">
+		<img src="/img/markut-noel-logo.svg" width="150px" alt="">
+	</div>
+
+	<div style="position: fixed; z-index: 100; bottom: 0px; left: 0px;">
+		<img src="/img/markut-noel-agaci.svg" width="175px" alt="">
+	</div>
