Responsive noel agaci

--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -90,5 +90,5 @@
 	</div>
 
 	<div style="position: fixed; z-index: 100; bottom: 0px; left: 0px;">
-		<img src="/img/markut-noel-agaci.svg" width="175px" alt="">
+		<img src="/img/markut-noel-agaci.svg" style="width:calc(120px + 80 * (100vw - 320px) / 1180)" alt="">
 	</div>
