A reklam alanını kaldırdım.

--- a/themes/Markut/layouts/index.html
+++ b/themes/Markut/layouts/index.html
@@ -25,9 +25,9 @@
              </div> </div>   
      </div>
 -->
-
-{{ partial "reklam/areklam.html" . }}
-<div id="markutdergi" class="carousel slide mt-1 text-dark" data-ride="carousel" data-interval="8400">
+<!--
+{{ partial "reklam/areklam.html" . }}-->
+<div id="markutdergi" class="carousel slide mt-5 text-dark" data-ride="carousel" data-interval="8400">
   <ol class="carousel-indicators">
     <li data-target="#markutdergi" data-slide-to="0" class="active text-dark"></li>
     <li data-target="#markutdergi" data-slide-to="1"></li>
