Markut yılbaşı sona erdi

--- a/themes/Markut/layouts/partials/head.html
+++ b/themes/Markut/layouts/partials/head.html
@@ -82,6 +82,7 @@
 	</head>
 <body>
 
+	<!-- Yılbaşı biter.
 	<div style="position: absolute; z-index: 100; right: 0px; top: 0px;">
 		<img src="/img/markut-noel-logo.svg" width="150px" alt="">
 	</div>
@@ -89,3 +90,4 @@
 	<div style="position: fixed; z-index: 100; bottom: 0px; left: 0px;">
 		<img src="/img/markut-noel-agaci.svg" style="width:calc(120px + 80 * (100vw - 320px) / 1180)" alt="">
 	</div>
+-->
