--- a/themes/Markut/layouts/card/list.html
+++ b/themes/Markut/layouts/card/list.html
@@ -4,7 +4,7 @@
     <a href="{{.Site.BaseURL}}">   <img loading="lazy" style="margin-bottom: -50px;" src="https://www.markut.net/img/logo-color.svg" width="200px" alt="Markut Logo"><br>
     <img src="https://www.markut.net/logo/svg/markut-type.svg" width="500px" alt=""></div></a>
     <h2 class="text-center mt-1 mb-4" style="font-size: 24px;">/CARD</h2>
-    <div style="max-width: 400px; margin: 0 auto; text-justify: newspaper; text-align: justify;"><p>Markut, Atahan Göktürk Güner tarafından 10 Şubat 2020 tarihinde kurulmuştur. Markut, Marmara Kreatif Ürün Tasarım ekibidir. Ekibimizle Ağustos 2020'de online endüstriyel tasarım dergimizi bu platformda yayınlamaya başladık. Dergimiz, endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üretmektedir.</p>
+    <div style="max-width: 400px; margin: 0 auto; text-justify: newspaper; text-align: justify;"><p>Markut, Marmara Kreatif Ürün Tasarım ekibidir. Ekibimizle Ağustos 2020'de online endüstriyel tasarım dergimizi bu platformda yayınlamaya başladık. Dergimiz, endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üretmektedir.</p>
 </div>
 </div>
 
