--- a/themes/Markut/layouts/index.html
+++ b/themes/Markut/layouts/index.html
@@ -132,8 +132,8 @@
 </div>
 -->
 
-
-{{ partial "reklam/breklam.html" . }}
+<!--
+{{ partial "reklam/breklam.html" . }}-->
 
 <!--
 <div class="container onde mb-5">
