--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -140,7 +140,7 @@
           </div>
         </div>
 </div>    
-        <div class="copyright"><a href="{{.Site.BaseURL}}">Markut.net</a>  <a href="/dergi/">/dergi</a> | Copyright © 2020-2021 | Markut tarafından tasarlandı.</div>
+        <div class="copyright"><a href="{{.Site.BaseURL}}">Markut.net</a>  <a href="/dergi/">/dergi</a> | Copyright © 2020-2021 |<a href="https://www.atahangokturk.com" target="_blank" > Markut tarafından tasarlandı</a></div>
     </div>
   </footer>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
